Add GetUserSegmentHistory API method
